Fixed url-bar icons misalignment

--- a/Private Mode Style/userChrome.css
+++ b/Private Mode Style/userChrome.css
@@ -185,6 +185,9 @@ LAYOUT
     -moz-window-dragging: no-drag !important;
     min-height: 25px !important;
 }
+#searchbar {
+    height: 25px !important;
+}
 #urlbar[focused="true"] {
     border-radius: 7px !important; 
 }
@@ -208,8 +211,15 @@ LAYOUT
 #PopupSearchAutoComplete {
     border-radius: 0 0 7px 7px !important;
 }
-.urlbar-icon {
-    margin: -4px 0px -4px 2px !important;
+.urlbar-icon:not(.search-go-button):not(#urlbar-go-button) {
+    margin: auto auto !important;
+    min-height: 16px !important;
+    min-width: 16px !important;
+}
+.urlbar-page-action, #urlbar-go-button, .search-go-button {
+    padding: 0px 6px !important;
+    min-height: 16px !important;
+    min-width: 16px !important;
 }
 :root {
     --urlbar-icon-padding: 4px !important;
